<resources>
    <string name="app_name">Pizza Market</string>
    <string name="login_btn">Login</string>
    <string name="registr_btn">Registration</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="login_guest">Login guest</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="police">By signing up, you agree to programs terms of service and privacy policy.</string>
    <string name="loading">Loading</string>
    <string name="check">Сhecking account existence</string>
    <string name="no_logged">Such an account already exists</string>
    <string name="logged">You are logged in</string>
    <string name="no_log">Account not exists</string>
    <string name="log_out">Logout</string>
    <string name="popular_choice">Popular choice</string>
    <string name="weekly_discount">Weekly discount</string>
    <string name="search">Search</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Account</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_support">Support</string>

    <string name="menu_home">Menu</string>
    <string name="menu_gallery">Basket</string>
    <string name="menu_slideshow">Settings account</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_about_app">About app</string>

    <string name="pizza_cesar">Pizza Cesar"</string>
    <string name="pizza_cheese">Pizza cheese"</string>
    <string name="pizza_classic">Pizza Classic"</string>
    <string name="pizza_four_cheese">Pizza 4 Cheese"</string>
    <string name="pizza_margharita">Pizza Margherita"</string>
    <string name="pizza_meat">Pizza Meaty"</string>
    <string name="pizza_neopl">Pizza Neapolitan"</string>
    <string name="pizza_penaple">Pizza with pineapple"</string>
    <string name="pizza_pepperony">Pizza Pepperoni"</string>
    <string name="pizza_sea">Pizza with seafood"</string>
    <string name="pizza_assorted">Pizza Assorted"</string>

    <!-- Menu additive-->
    <string-array name="addit_menu">
        <item>No</item>
        <item>Cheese</item>
        <item>Sauce</item>
    </string-array>

    <string-array name="menu_deliver">
        <item>Courier</item>
        <item>Pickup</item>
    </string-array>
    <!-- Меню размер-->
    <string-array name="menu_size">
        <item>32</item>
        <item>48</item>
        <item>55</item>
    </string-array>

    <string name="size_pizza">Diameter pizza</string>
    <string name="dditives">Аdditives</string>
    <string name="delivery_method">Delivery method</string>
    <string name="price">Price</string>
    <string name="information">Information</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="selected">Selected</string>

    <string name="document">Documents</string>
    <string name="application">Application</string>

    <string name="users_agreement">Users agreement</string>
    <string name="license_agreement">License agreement</string>
    <string name="promotion_terms">Promotion terms</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="payment_rules">Payment rules</string>
</resources>