<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_menu">

    <fragment
        android:id="@+id/nav_home_menu"
        android:name="com.example.pizzamarket.ui.menu.MenuFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_basket"
        android:name="com.example.pizzamarket.ui.basket.BasketFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/nav_settings_account"
        android:name="com.example.pizzamarket.ui.settingsacc.SettingsAccountFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_settings_account" />
</navigation>